--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>lance encarnado</title>
+	<link rel="shortcut icon" type="image/png" href="favicon_initials.png"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" href="js/lightbox/css/lightbox.css">
 	<link rel="stylesheet" href="css/style.css">
