--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -85,8 +85,8 @@
 		<!-- work windows here -->
 	</div>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src='https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js'></script>
+	<script src="js/jquery.min.js"></script>
+	<script src='js/draggabilly.pkgd.min.js'></script>
 	<script src="js/lightbox/js/lightbox.js"></script>
 	<script src="./work.js"></script>
 	<script src="./script.js"></script>
