--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -30,6 +30,7 @@
 	<div class="desktop">
 		<div class="desktop-icons">
 			<div class="icon disk" data-window="twitter" data-is-open="false"><img src="img/icons/twitter.png" alt="Twitter"><span class="icon-label">Twitter</span></div>
+			<div class="icon disk" data-window="about" data-is-open="false"><img src="img/icons/todo.png" alt="About"><span class="icon-label">About</span></div>
 			<div class="icon disk" data-window="work" data-is-open="false"><img src="img/icons/folder.png" alt="Work"><span class="icon-label">Work</span></div>
 			<div class="icon disk" id="contact"><a href="mailto:lance.encarnado@gmail.com"><img src="img/icons/contact.png" alt="Work"><span class="icon-label">Contact</span></a></div>
 			<div class="icon disk" data-window="todo" data-is-open="false"><img src="img/icons/todo.png" alt="To-Do"><span class="icon-label">To-Do</span></div>
@@ -49,6 +50,22 @@
 					</p>&mdash; Julien Baker (@julienrbaker) <a href="https://twitter.com/julienrbaker/status/1082128199348375552?ref_src=twsrc%5Etfw">January 7, 2019</a>
 				</blockquote>
 				<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+
+		<div class="window" id="about" data-is-open="false">
+			<div class="title-bar">
+				<button class="close"><span class="hidden">Close</span></button>
+				<h1 class="title">About</h1>
+				<button class="resize"><span class="hidden">Resize</span></button>
+			</div>
+			<div class="details-bar"><span>21 items</span><span>1,227K in disk</span><span>189K available</span></div>
+			<div class="window__pane">
+				<img class="about-portrait" src="img/portrait_placeholder.jpg">
+				<p>My name is <span class="emphasis">Lance Encarnado</span>. I am a web and mobile developer based in Ottawa, ON, Canada. 🇨🇦
+				<p>Currently, I specialize in developing <span class="emphasis">fun and experimental user-facing experiences</span> like games and meme generators (and this portfolio), as well as more "traditional" websites for companies and online stores.
+				<p>I recieved a Bachelor of Computer Science from Carleton University in 2018.
+				<p>I am always interested in working on new and interesting freelance projects! To get an idea of what I've worked on previously, check out the "Work" section of this site. Feel free to reach out to me at lance.encarnado@gmail.com, or by clicking on the "Contact" icon.
 			</div>
 		</div>
 
@@ -78,7 +95,7 @@
 				<br> - make windows overlap instead of flex
 				<br> - have windows appear in order of opening instead of pre-ordered according to html
 				<br> - add more projects
-				<br> - replace twitter with about me
+				<br> <s>- write an about me</s>
 			</div>
 		</div>
 
