--- a/POPCAAN/generator.html
+++ b/POPCAAN/generator.html
@@ -109,11 +109,11 @@ by tacklebox / coded by @LScorrcho (2023)
 		</div>
 
 		<div class="streaming">
-			<a href="https://open.spotify.com/album/5zCvAq0MLqUv0vE96iMbv2?si=VNDCOvvURv6WFRzotaS2zA" class="streaminglink" target="_blank"><img class="streamingimg" id="spotify" src="assets/dsp/spotify.png" alt="Listen on Spotify"></a>
-			<a href="https://music.apple.com/ca/album/pray-4-love/1504192331" class="streaminglink" target="_blank"><img class="streamingimg" id="apple" src="assets/dsp/apple.png" alt="Listen on Apple Music"></a>
-			<br><a href="https://tidal.com/browse/album/135327972" class="streaminglink" target="_blank"><img class="streamingimg" id="tidal" src="assets/dsp/tidal.png" alt="Listen on Tidal"></a>
-			<a href="https://soundcloud.com/rodwave/sets/pray-4-love" class="streaminglink" target="_blank"><img class="streamingimg" id="soundcloud" src="assets/dsp/soundcloud.png" alt="Listen on Soundcloud"></a>
-			<br><a href="https://www.youtube.com/watch?v=WO-jOWpwkk4" class="streaminglink" target="_blank"><img class="streamingimg" id="apple" src="assets/dsp/youtube.png" alt="Listen on YouTube"></a>
+			<a href="#" class="streaminglink" target="_blank"><img class="streamingimg" id="spotify" src="assets/dsp/spotify.png" alt="Listen on Spotify"></a>
+			<a href="#" class="streaminglink" target="_blank"><img class="streamingimg" id="apple" src="assets/dsp/apple.png" alt="Listen on Apple Music"></a>
+			<br><a href="#" class="streaminglink" target="_blank"><img class="streamingimg" id="tidal" src="assets/dsp/tidal.png" alt="Listen on Tidal"></a>
+			<a href="#" class="streaminglink" target="_blank"><img class="streamingimg" id="soundcloud" src="assets/dsp/soundcloud.png" alt="Listen on Soundcloud"></a>
+			<br><a href="#" class="streaminglink" target="_blank"><img class="streamingimg" id="apple" src="assets/dsp/youtube.png" alt="Listen on YouTube"></a>
 		</div>
 
 		<div class="footer">
