download image if navigator.share isn't supported (chrome)

--- a/POPCAAN/index.html
+++ b/POPCAAN/index.html
@@ -48,7 +48,7 @@ by tacklebox / coded by @LScorrcho (2023)
 		</div>
 
 		<div class="enter">
-			<a href="generator.html">ENTER SITE ></a>
+			<a href="generator.html">Enter Site ></a>
 		</div>
 
 		<div class="albumart">
