--- a/POPCAAN/generator.html
+++ b/POPCAAN/generator.html
@@ -49,7 +49,7 @@ by tacklebox / coded by @LScorrcho (2023)
 		</div>
 
 		<div class="enter">
-			<a href="index.html">< BACK</a>
+			<a href="index.html">< Back</a>
 		</div>
 
 		<div class="row">
