footer logos stack on mobile, match index album art margins to generator on mobile

--- a/POPCAAN/generator.html
+++ b/POPCAAN/generator.html
@@ -12,7 +12,7 @@ by tacklebox / coded by @LScorrcho (2023)
 
 		<title>POPCAAN - GREAT IS HE</title>
 		<meta name="title" content="POPCAAN - GREAT IS HE">
-		<meta name="description" content="">
+		<meta name="description" content="New album from Popcaan “Great Is He” out now.">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -116,11 +116,12 @@ by tacklebox / coded by @LScorrcho (2023)
 		</div>
 
 		<div class="footer">
-			<a href="https://tacklebox.company" class="footerlink" target="_blank">
-				<img class="footerlogoimg alignleft" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
-			</a>
 			<a href="https://www.ovosound.com/" class="footerlink" target="_blank">
-				<img class="footerlogoimg alignright" src="assets/ovosoundlogo.png" alt="OVO Sound">
+				<img id="ovosoundlogo" class="footerlogoimg alignright" src="assets/ovosoundlogo.png" alt="OVO Sound">
+			</a>
+			<br class="mobileonlybreak">
+			<a href="https://tacklebox.company" class="footerlink" target="_blank">
+				<img id="tackleboxlogo" class="footerlogoimg alignleft" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
 			</a>
 			<div style="clear: both;"></div>
 		</div>
