--- a/POPCAAN/index.html
+++ b/POPCAAN/index.html
@@ -69,11 +69,12 @@ by tacklebox / coded by @LScorrcho (2023)
 
 
 		<div class="footer">
-			<a href="https://tacklebox.company" class="footerlink" target="_blank">
-				<img class="footerlogoimg alignleft" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
-			</a>
 			<a href="https://www.ovosound.com/" class="footerlink" target="_blank">
-				<img class="footerlogoimg alignright" src="assets/ovosoundlogo.png" alt="OVO Sound">
+				<img id="ovosoundlogo" class="footerlogoimg alignright" src="assets/ovosoundlogo.png" alt="OVO Sound">
+			</a>
+			<br class="mobileonlybreak">
+			<a href="https://tacklebox.company" class="footerlink" target="_blank">
+				<img id="tackleboxlogo" class="footerlogoimg alignleft" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
 			</a>
 			<div style="clear: both;"></div>
 		</div>
