added opengraph / fixed text spacing

--- a/POPCAAN/generator.html
+++ b/POPCAAN/generator.html
@@ -22,19 +22,21 @@ by tacklebox / coded by @LScorrcho (2023)
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
 
-		<!-- TODO: ADD Open Graph / Facebook -->
-		<!-- <meta property="og:type" content="website">
-		<meta property="og:url" content="https://rags-2-riches.com">
-		<meta property="og:title" content="Rags2Riches">
-		<meta property="og:description" content="Rags2Riches Image Generator // Rod Wave - Pray 4 Love Deluxe out August 7, 2020!">
-		<meta property="og:image" content="https://rags-2-riches.com/assets/bill_rod.jpg"> -->
+		<!-- Open Graph / Facebook -->
+		<!-- TODO: REPLACE URL WITH FINAL URL -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://lanceencarnado.github.io/POPCAAN/generator">
+		<meta property="og:title" content="POPCAAN - GREAT IS HE">
+		<meta property="og:description" content="New album from Popcaan “Great Is He” out now.">
+		<meta property="og:image" content="https://lanceencarnado.github.io/POPCAAN/assets/popcaan_preview_image.jpg">
 
-		<!-- TODO: ADD Twitter -->
-		<!-- <meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="https://rags-2-riches.com">
-		<meta property="twitter:title" content="Rags2Riches">
-		<meta property="twitter:description" content="Rags2Riches Image Generator // Rod Wave - Pray 4 Love Deluxe out August 7, 2020!">
-		<meta property="twitter:image" content="https://rags-2-riches.com/assets/bill_rod.jpg"> -->
+		<!-- Twitter -->
+		<!-- TODO: REPLACE URL WITH FINAL URL -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://lanceencarnado.github.io/POPCAAN/generator">
+		<meta property="twitter:title" content="POPCAAN - GREAT IS HE">
+		<meta property="twitter:description" content="New album from Popcaan “Great Is He” out now.">
+		<meta property="twitter:image" content="https://lanceencarnado.github.io/POPCAAN/assets/popcaan_preview_image.jpg">
 
 		<!-- TODO: ADD GOOGLE ANALYTICS -->
 
@@ -103,8 +105,8 @@ by tacklebox / coded by @LScorrcho (2023)
 		</div> -->
 
 		<div class="calltoaction">
-			SHARE YOUR IMAGE FOR A CHANCE TO
-			<br>WIN A VIRTUAL MEET & GREET WITH POPCAAN!
+			SHARE YOUR IMAGE FOR <br class="mobileonlybreak">A CHANCE TO
+			<br class="webonlybreak">WIN A VIRTUAL MEET & GREET WITH POPCAAN!
 		</div>
 
 		<div class="streaming">
