--- a/POPCAAN/generator.html
+++ b/POPCAAN/generator.html
@@ -2,7 +2,7 @@
 
 <!--
 popcaan / great is he
-by tacklebox / coded by @LScorrcho (2023)
+by tacklebox / coded by lance encarnado (2023)
 -->
 
 <html lang="en" dir="ltr">
