--- a/POPCAAN/index.html
+++ b/POPCAAN/index.html
@@ -7,7 +7,7 @@
 
 		<title>POPCAAN - GREAT IS HE</title>
 		<meta name="title" content="POPCAAN - GREAT IS HE">
-		<meta name="description" content="">
+		<meta name="description" content="New album from Popcaan “Great Is He” out now.">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
