--- a/POPCAAN/index.html
+++ b/POPCAAN/index.html
@@ -39,7 +39,8 @@
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 		<link rel="stylesheet" href="css/style.css?rnd=80">
 	</head>
-	<body>
+	<body ontouchstart="">
+
 		<div class="header">
 			<img src="assets/greatishe.png" alt="Popcaan - Great is He">
 		</div>
@@ -52,28 +53,35 @@
 			<img id="albumartimg" src="assets/greatishe_cover.jpg" alt="Popcaan - Great is He">
 		</div>
 
+		<div class="albumart">
+			<img id="tracklistimg" src="assets/greatishe_tracklist.jpg" alt="Popcaan - Great is He">
+		</div>
+
 		<div class="calltoaction">
-			<p>NEW ALBUM <i>GREAT IS HE</i> OUT NOW.
-			<br>CLICK <a href="#" target="_blank">HERE</a> TO STREAM.</p>
+			<p>NEW ALBUM <i>GREAT IS HE</i> OUT 1/27.
+			<br>PRE-SAVE <a href="https://ovo-popcaan.ffm.to/greatishe" target="_blank">HERE</a>.</p>
 		</div>
 
 		<div class="videos">
 			VIDEOS
 			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/TjJZNdLSexU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/TjJZNdLSexU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/TjJZNdLSexU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/Ub6SAli2WpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/nCkqzLNE9W8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/3xUFh_6N0IY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 		</div>
 
+		<div class="socials">
+			<a href="https://www.facebook.com/PopcaanMusic/" target="_blank"><div id="facebook" class="social_icon"></div></a>
+			<a href="https://www.youtube.com/channel/UCYGHSw2kacL589nNX4l0fMg" target="_blank"><div id="youtube" class="social_icon"></div></a>
+			<a href="https://twitter.com/PopcaanMusic" target="_blank"><div id="twitter" class="social_icon"></div></a>
+			<a href="https://www.instagram.com/popcaanmusic/" target="_blank"><div id="instagram" class="social_icon"></div></a>
+			<a href="https://www.tiktok.com/@popcaanofficial" target="_blank"><div id="tiktok" class="social_icon"></div></a>
+		</div>
 
 		<div class="footer">
 			<a href="https://www.ovosound.com/" class="footerlink" target="_blank">
-				<img id="ovosoundlogo" class="footerlogoimg alignright" src="assets/ovosoundlogo.png" alt="OVO Sound">
+				<img id="ovosoundlogo" class="footerlogoimg" src="assets/ovosoundlogo.png" alt="OVO Sound">
 			</a>
-			<br class="mobileonlybreak">
-			<a href="https://tacklebox.company" class="footerlink" target="_blank">
-				<img id="tackleboxlogo" class="footerlogoimg alignleft" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
-			</a>
-			<div style="clear: both;"></div>
 		</div>
 
 		<script src="js/jquery-3.5.1.min.js" charset="utf-8"></script>
