replace with real URL

--- a/POPCAAN/generator.html
+++ b/POPCAAN/generator.html
@@ -23,20 +23,18 @@ by tacklebox / coded by lance encarnado (2023)
 		<meta name="theme-color" content="#ffffff">
 
 		<!-- Open Graph / Facebook -->
-		<!-- TODO: REPLACE URL WITH FINAL URL -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://lanceencarnado.github.io/POPCAAN/generator">
+		<meta property="og:url" content="https://gihealbum.com/generator">
 		<meta property="og:title" content="POPCAAN - GREAT IS HE">
 		<meta property="og:description" content="New album from Popcaan “Great Is He” out now.">
-		<meta property="og:image" content="https://lanceencarnado.github.io/POPCAAN/assets/popcaan_preview_image.jpg">
+		<meta property="og:image" content="https://gihealbum.com/assets/popcaan_preview_image.jpg">
 
 		<!-- Twitter -->
-		<!-- TODO: REPLACE URL WITH FINAL URL -->
 		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="https://lanceencarnado.github.io/POPCAAN/generator">
+		<meta property="twitter:url" content="https://gihealbum.com/generator">
 		<meta property="twitter:title" content="POPCAAN - GREAT IS HE">
 		<meta property="twitter:description" content="New album from Popcaan “Great Is He” out now.">
-		<meta property="twitter:image" content="https://lanceencarnado.github.io/POPCAAN/assets/popcaan_preview_image.jpg">
+		<meta property="twitter:image" content="https://gihealbum.com/assets/popcaan_preview_image.jpg">
 
 		<!-- TODO: ADD GOOGLE ANALYTICS -->
 
