add color to hovers

--- a/POPCAAN/generator.html
+++ b/POPCAAN/generator.html
@@ -79,7 +79,7 @@ by tacklebox / coded by lance encarnado (2023)
 		</div>
 
 		<div class="calltoaction">
-			<p>NEW ALBUM <i>GREAT IS HE</i> OUT 1/27.
+			<p>NEW ALBUM <i>GREAT IS HE</i> <br class="mobileonlybreak">OUT 1/27.
 			<br>PRE-SAVE <a href="https://ovo-popcaan.ffm.to/greatishe" target="_blank">HERE</a>.</p>
 		</div>
 
@@ -100,8 +100,8 @@ by tacklebox / coded by lance encarnado (2023)
 		</div>
 
 		<div class="footer">
-			<a href="https://www.ovosound.com/" class="footerlink" target="_blank">
-				<img id="ovosoundlogo" class="footerlogoimg" src="assets/ovosoundlogo.png" alt="OVO Sound">
+			<a href="https://www.ovosound.com/" target="_blank">
+				<div id="ovosoundlogo" class="footerlogosvg"></div>
 			</a>
 		</div>
 
