--- a/POPCAAN/index.html
+++ b/POPCAAN/index.html
@@ -56,7 +56,7 @@
 		</div>
 
 		<div class="calltoaction">
-			<p>NEW ALBUM <i>GREAT IS HE</i> OUT 1/27.
+			<p>NEW ALBUM <i>GREAT IS HE</i> <br class="mobileonlybreak">OUT 1/27.
 			<br>PRE-SAVE <a href="https://ovo-popcaan.ffm.to/greatishe" target="_blank">HERE</a>.</p>
 		</div>
 
@@ -77,8 +77,8 @@
 		</div>
 
 		<div class="footer">
-			<a href="https://www.ovosound.com/" class="footerlink" target="_blank">
-				<img id="ovosoundlogo" class="footerlogoimg" src="assets/ovosoundlogo.png" alt="OVO Sound">
+			<a href="https://www.ovosound.com/" target="_blank">
+				<div id="ovosoundlogo" class="footerlogosvg"></div>
 			</a>
 		</div>
 
