--- a/POPCAAN/generator.html
+++ b/POPCAAN/generator.html
@@ -36,7 +36,15 @@ by tacklebox / coded by lance encarnado (2023)
 		<meta property="twitter:description" content="New album from Popcaan “Great Is He” out now.">
 		<meta property="twitter:image" content="https://gihealbum.com/assets/popcaan_preview_image.jpg">
 
-		<!-- TODO: ADD GOOGLE ANALYTICS -->
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-JE4149EPQB"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-JE4149EPQB');
+		</script>
 
 		<link rel='stylesheet' href='js/croppie.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
