new round of notes

--- a/POPCAAN/generator.html
+++ b/POPCAAN/generator.html
@@ -86,7 +86,7 @@ by tacklebox / coded by lance encarnado (2023)
 			</div>
 		</div>
 
-		<div class="calltoaction">
+		<div class="calltoaction ctamidpage">
 			<p>NEW ALBUM <i>GREAT IS HE</i> <br class="mobileonlybreak">OUT 1/27.
 			<br>PRE-SAVE <a href="https://ovo-popcaan.ffm.to/greatishe" target="_blank">HERE</a>.</p>
 		</div>
