--- a/POPCAAN/index.html
+++ b/POPCAAN/index.html
@@ -51,8 +51,13 @@
 			<img src="assets/greatishe.png" alt="Popcaan - Great is He">
 		</div>
 
-		<div class="enter">
+		<!-- <div class="enter">
 			<a href="generator.html">Enter Site ></a>
+		</div> -->
+
+		<div class="calltoaction ctaheader">
+			<p>NEW ALBUM <i>GREAT IS HE</i> <br class="mobileonlybreak">OUT 1/27.
+			<br>PRE-SAVE <a href="https://ovo-popcaan.ffm.to/greatishe" target="_blank">HERE</a>.</p>
 		</div>
 
 		<div class="albumart">
@@ -63,9 +68,8 @@
 			<img id="tracklistimg" src="assets/greatishe_tracklist.jpg" alt="Popcaan - Great is He">
 		</div>
 
-		<div class="calltoaction">
-			<p>NEW ALBUM <i>GREAT IS HE</i> <br class="mobileonlybreak">OUT 1/27.
-			<br>PRE-SAVE <a href="https://ovo-popcaan.ffm.to/greatishe" target="_blank">HERE</a>.</p>
+		<div class="calltoaction ctamidpage">
+			<p>TRY THE GIHE ARTWORK <br>GENERATOR <a href="generator.html">HERE</a>.</p>
 		</div>
 
 		<div class="videos">
