--- a/POPCAAN/index.html
+++ b/POPCAAN/index.html
@@ -43,7 +43,7 @@
 
 		<link rel='stylesheet' href='js/croppie.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-		<link rel="stylesheet" href="css/style.css?rnd=120">
+		<link rel="stylesheet" href="css/style.css?rnd=121">
 	</head>
 	<body ontouchstart="">
 
@@ -57,7 +57,7 @@
 
 		<div class="calltoaction ctaheader">
 			<p>NEW ALBUM <i>GREAT IS HE</i> <br class="mobileonlybreak">OUT 1/27.
-			<br>PRE-SAVE <a href="https://ovo-popcaan.ffm.to/greatishe" target="_blank">HERE</a>.</p>
+			<br>PRE-SAVE <a href="https://ovo-popcaan.ffm.to/greatishe_album" target="_blank">HERE</a>.</p>
 		</div>
 
 		<div class="albumart">
@@ -69,7 +69,7 @@
 		</div>
 
 		<div class="calltoaction ctamidpage">
-			<p>TRY THE GIHE ARTWORK <br>GENERATOR <a href="generator.html">HERE</a>.</p>
+			<p>TRY THE GIHE ARTWORK <br>GENERATOR <a href="generator">HERE</a>.</p>
 		</div>
 
 		<div class="videos">
