new round of notes

--- a/POPCAAN/generator.html
+++ b/POPCAAN/generator.html
@@ -48,7 +48,7 @@ by tacklebox / coded by lance encarnado (2023)
 
 		<link rel='stylesheet' href='js/croppie.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-		<link rel="stylesheet" href="css/style.css?rnd=121">
+		<link rel="stylesheet" href="css/style.css?rnd=130">
 	</head>
 	<body ontouchstart="">
 		<div class="header">
@@ -87,8 +87,7 @@ by tacklebox / coded by lance encarnado (2023)
 		</div>
 
 		<div class="calltoaction ctamidpage">
-			<p>NEW ALBUM <i>GREAT IS HE</i> <br class="mobileonlybreak">OUT 1/27.
-			<br>PRE-SAVE <a href="https://ovo-popcaan.ffm.to/greatishe_album" target="_blank">HERE</a>.</p>
+			<p>SHARE YOUR PHOTO WITH THE HASHTAG #GIHE<br> AND TAG @POPCAANMUSIC!</p>
 		</div>
 
 		<!-- <div class="streaming">
