--- a/POPCAAN/index.html
+++ b/POPCAAN/index.html
@@ -43,7 +43,7 @@
 
 		<link rel='stylesheet' href='js/croppie.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-		<link rel="stylesheet" href="css/style.css?rnd=121">
+		<link rel="stylesheet" href="css/style.css?rnd=130">
 	</head>
 	<body ontouchstart="">
 
@@ -61,21 +61,25 @@
 		</div>
 
 		<div class="albumart">
-			<img id="albumartimg" src="assets/greatishe_cover.jpg" alt="Popcaan - Great is He">
-		</div>
-
-		<div class="albumart" id="tracklist">
-			<img id="tracklistimg" src="assets/greatishe_tracklist.jpg" alt="Popcaan - Great is He">
+			<a href="https://ovo-popcaan.ffm.to/greatishe_album" target="_blank">
+				<img id="albumartimg" src="assets/greatishe_cover.jpg" alt="Popcaan - Great is He">
+			</a>
 		</div>
 
 		<div class="calltoaction ctamidpage">
 			<p>TRY THE GIHE ARTWORK <br>GENERATOR <a href="generator">HERE</a>.</p>
 		</div>
 
+		<div class="albumart" id="tracklist">
+			<a href="https://ovo-popcaan.ffm.to/greatishe_album" target="_blank">
+				<img id="tracklistimg" src="assets/greatishe_tracklist.jpg" alt="Popcaan - Great is He">
+			</a>
+		</div>
+
 		<div class="videos">
 			VIDEOS
+			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/zD7ELN3EmjE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/TjJZNdLSexU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/Ub6SAli2WpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/nCkqzLNE9W8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 			<p><iframe class="popcaanvideo" src="https://www.youtube.com/embed/3xUFh_6N0IY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 		</div>
