--- a/POPCAAN/index.html
+++ b/POPCAAN/index.html
@@ -7,7 +7,7 @@
 
 		<title>POPCAAN - GREAT IS HE</title>
 		<meta name="title" content="POPCAAN - GREAT IS HE">
-		<meta name="description" content="New album from Popcaan “Great Is He” out now.">
+		<meta name="description" content="New album from Popcaan “Great Is He” - Pre-save now.">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -21,14 +21,14 @@
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://gihealbum.com/">
 		<meta property="og:title" content="POPCAAN - GREAT IS HE">
-		<meta property="og:description" content="New album from Popcaan “Great Is He” out now.">
+		<meta property="og:description" content="New album from Popcaan “Great Is He” - Pre-save now.">
 		<meta property="og:image" content="https://gihealbum.com/assets/popcaan_preview_image.jpg">
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="https://gihealbum.com/">
 		<meta property="twitter:title" content="POPCAAN - GREAT IS HE">
-		<meta property="twitter:description" content="New album from Popcaan “Great Is He” out now.">
+		<meta property="twitter:description" content="New album from Popcaan “Great Is He” - Pre-save now.">
 		<meta property="twitter:image" content="https://gihealbum.com/assets/popcaan_preview_image.jpg">
 
 		<!-- Google tag (gtag.js) -->
@@ -67,7 +67,7 @@
 		</div>
 
 		<div class="calltoaction ctamidpage">
-			<p>TRY THE GIHE ARTWORK <br>GENERATOR <a href="generator">HERE</a>.</p>
+			<p>TRY THE <i>GIHE</i> ARTWORK <br>GENERATOR <a href="generator">HERE</a>.</p>
 		</div>
 
 		<div class="albumart" id="tracklist">
