update popcaan - album out now

--- a/POPCAAN/index.html
+++ b/POPCAAN/index.html
@@ -7,7 +7,7 @@
 
 		<title>POPCAAN - GREAT IS HE</title>
 		<meta name="title" content="POPCAAN - GREAT IS HE">
-		<meta name="description" content="New album from Popcaan “Great Is He” - Pre-save now.">
+		<meta name="description" content="New album from Popcaan “Great Is He” - Out now.">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -21,14 +21,14 @@
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://gihealbum.com/">
 		<meta property="og:title" content="POPCAAN - GREAT IS HE">
-		<meta property="og:description" content="New album from Popcaan “Great Is He” - Pre-save now.">
+		<meta property="og:description" content="New album from Popcaan “Great Is He” - Out now.">
 		<meta property="og:image" content="https://gihealbum.com/assets/popcaan_preview_image.jpg">
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="https://gihealbum.com/">
 		<meta property="twitter:title" content="POPCAAN - GREAT IS HE">
-		<meta property="twitter:description" content="New album from Popcaan “Great Is He” - Pre-save now.">
+		<meta property="twitter:description" content="New album from Popcaan “Great Is He” - Out now.">
 		<meta property="twitter:image" content="https://gihealbum.com/assets/popcaan_preview_image.jpg">
 
 		<!-- Google tag (gtag.js) -->
@@ -56,8 +56,8 @@
 		</div> -->
 
 		<div class="calltoaction ctaheader">
-			<p>NEW ALBUM <i>GREAT IS HE</i> <br class="mobileonlybreak">OUT 1/27.
-			<br>PRE-SAVE <a href="https://ovo-popcaan.ffm.to/greatishe_album" target="_blank">HERE</a>.</p>
+			<p>NEW ALBUM <i>GREAT IS HE</i> <br class="mobileonlybreak">OUT NOW.
+			<br>STREAM <a href="https://ovo-popcaan.ffm.to/greatishe_album" target="_blank">HERE</a>.</p>
 		</div>
 
 		<div class="albumart">
