uhhhh a bunch of crap i guess

--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -63,8 +63,9 @@
 			<div class="window__pane">
 				<img class="about-portrait" src="img/portrait_placeholder.jpg">
 				<p>My name is <span class="emphasis">Lance Encarnado</span>. I am a web and mobile developer based in Ottawa, ON, Canada. 🇨🇦
-				<p>Currently, I specialize in developing <span class="emphasis">fun and experimental user-facing experiences</span> like games and meme generators (and this portfolio), as well as more "traditional" websites for companies and online stores.
 				<p>I recieved a Bachelor of Computer Science from Carleton University in 2018.
+				<p>Currently, I specialize in developing <span class="emphasis">fun and experimental user-facing experiences</span> like games and meme generators (and this portfolio), as well as more "traditional" websites for companies and online stores.
+				<p>Past clients include <span class="emphasis">300 Entertainment</span>, <span class="emphasis">OVO Sound</span>, and <span class="emphasis">Alamo Records</span>.
 				<p>I am always interested in working on new and interesting freelance projects! To get an idea of what I've worked on previously, check out the "Work" section of this site. Feel free to reach out to me at lance.encarnado@gmail.com, or by clicking on the "Contact" icon.
 			</div>
 		</div>
@@ -96,6 +97,7 @@
 				<br> - have windows appear in order of opening instead of pre-ordered according to html
 				<br> - add more projects
 				<br> <s>- write an about me</s>
+				<br> - fix desktop icons on mobile
 			</div>
 		</div>
 
