make it more in line with ovo store logo on mobile

--- a/OVOSTORE/loadinganimation/loading.html
+++ b/OVOSTORE/loadinganimation/loading.html
@@ -29,6 +29,12 @@
 			#loader-content img {
 				width: 120px;
 			}
+
+			@media only screen and (max-width: 749px) {
+				#loader-content img {
+					width: 18.7vw;
+				}
+			}
 		</style>
 	</head>
 	<body>
