more mobile fixes

--- a/OVOSTORE/loadinganimation/loading.html
+++ b/OVOSTORE/loadinganimation/loading.html
@@ -31,6 +31,11 @@
 			}
 
 			@media only screen and (max-width: 749px) {
+				#full-screen-loader {
+					height: 100vh;
+					max-height: -webkit-fill-available;
+				}
+
 				#loader-content img {
 					width: 18.7vw;
 				}
