--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -6,38 +6,85 @@
 		<title>ROY WOODS - MIXED EMOTIONS</title>
 		<!-- <link rel="stylesheet" href="css/base.css"> -->
 		<style media="screen">
-			body {
-				width: 100vw;
+			.wrapper {
+				align-items: center;
+				display: flex;
+				height: 90%;
+				justify-content: center;
 				margin: auto;
+				width: 90%;
+				max-width: 80vw;
 			}
 
-			.hard {
+			.aspect {
+				padding-bottom: 70%;
+				position: relative;
+				width: 100%;
+			}
+
+			.aspect-inner {
+				bottom: 0;
+				left: 0;
+				position: absolute;
+				right: 0;
+				top: 0;
+			}
+
+			.flipbook {
+				height: 100%;
+				transition: margin-left 0.25s ease-out;
+				width: 100%;
+				-webkit-touch-callout: none;
+				-webkit-user-select: none;
+				-khtml-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
+			}
+			.flipbook .page {
+				height: 100%;
+				width: 100%;
 				background-color: #fff;
+				font-size: 2vw;
+				text-align: center;
+			}
+			.flipbook .page img {
+				max-width: 100%;
+				height: 100%;
 			}
 		</style>
 	</head>
 	<body>
-		<div id="flipbook">
-			<div class="hard"> Turn.js </div>
-			<div class="hard"></div>
-			<div> Page 1 </div>
-			<div> Page 2 </div>
-			<div> Page 3 </div>
-			<div> Page 4 </div>
-			<div class="hard"></div>
-			<div class="hard"></div>
+		<div class="wrapper">
+			<div class="aspect">
+				<div class="aspect-inner">
+					<div class="flipbook" id="flipbook">
+						<div class="page hard">
+							<p>ROY WOODS
+							<p>MIXED EMOTIONS - GUESTBOOK
+						</div>
+						<div class="page">First comment test. Page one</div>
+						<div class="page">Second comment test. Page two</div>
+						<div class="page"><img src="https://raw.github.com/blasten/turn.js/master/demos/magazine/pages/04.jpg" draggable="false" alt="" /></div>
+						<div class="page"><img src="https://raw.github.com/blasten/turn.js/master/demos/magazine/pages/05.jpg" draggable="false" alt="" /></div>
+						<div class="page"><img src="https://raw.github.com/blasten/turn.js/master/demos/magazine/pages/06.jpg" draggable="false" alt="" /></div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 	<script src="js/index.js"></script>
-	<script src="js/turn.min.js"></script>
-	<!-- <script src="js/turn.html4.min.js"></script>
 	<script src="js/zoom.min.js"></script>
-	<script src="js/scissor.min.js"></script> -->
+	<script src="js/turn.min.js"></script>
 	<script type="text/javascript">
-		$("#flipbook").turn({
-			width: "50vw",
-			height: "25vh",
+		var flipbookEL = document.getElementById('flipbook');
+		window.addEventListener('resize', function (e) {
+			flipbookEL.style.width = '';
+			flipbookEL.style.height = '';
+			$(flipbookEL).turn('size', flipbookEL.clientWidth, flipbookEL.clientHeight);
+		});
+		$(flipbookEL).turn({
 			autoCenter: true
 		});
 	</script>
