--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -7,9 +7,16 @@
 		<link rel="stylesheet" href="css/base.css">
 	</head>
 	<body>
-		<!-- <video autoplay muted id="watercolorIntro">
+		<video autoplay muted id="watercolorIntro">
 			<source src="assets/watercolor.mp4" type="video/mp4">
-		</video> -->
+		</video>
+
+		<div class="container" id="openingLogoContainer">
+			<div class="content">
+				<img id="openingLogo" src="assets/mixedemotionsanimated-noloop-crop.gif" alt="">
+				<p id="startButton">START</p>
+			</div>
+		</div>
 
 		<div class="container" id="container1">
 			<div class="content">
