force gif to reload everytime with rnd, fix on mobile

--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/base.css">
 	</head>
 	<body>
-		<video autoplay muted id="watercolorIntro">
+		<video playsinline autoplay muted id="watercolorIntro">
 			<source src="assets/watercolor.mp4" type="video/mp4">
 		</video>
 
