--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+roy woods -
+by @LScorrcho (2019)
+
+your dad took the bread and he like, absconded man
+-->
+
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
@@ -24,9 +31,9 @@
 				<p>*Include a note or message from Roy: Why the album is named Mixed Emotions and how he wants his fans to go on a journey with him to learn about the album*
 				<div class="question">
 						Wha gwan, how’s your day?
-						<p><button class="button" id="button2a" onclick="displayQuestion2a()">TBH I’ve been better</button>
-						<p><button class="button" id="button2b" onclick="displayQuestion2b()">My day is 10/10</button>
 				</div>
+				<p><button class="button" id="button2a" onclick="displayQuestion2a()">TBH I’ve been better</button>
+				<p><button class="button" id="button2b" onclick="displayQuestion2b()">My day is 10/10</button>
 			</div>
 		</div>
 
