Add p to start button

--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -22,7 +22,7 @@ your dad took the bread and he like, absconded man
 		<div class="container" id="openingLogoContainer">
 			<div class="content">
 				<img id="openingLogo" src="assets/mixedemotionsanimated-noloop-crop.gif" alt="">
-				<button class="button" id="startButton">START</button>
+				<p><button class="button" id="startButton">START</button>
 			</div>
 		</div>
 
